--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# extension-less executable
+*
+!*.*
+!*/
+
 # Prerequisites
 *.d
 
@@ -42,3 +47,6 @@
 # cl files
 *.ilk
 *.pdb
+
+# Mac files
+*.plist
